@@ -69,8 +69,6 @@ if prefer :apps4, 'learn-rails'
     # >-------------------------------[ Routes ]--------------------------------<
 
     copy_from_repo 'config/routes.rb', :repo => repo
-    # correct application name
-    gsub_file 'config/routes.rb', /^.*.routes.draw do/, "#{app_const}.routes.draw do"
 
     # >-------------------------------[ Assets ]--------------------------------<
 
