@@ -2,6 +2,8 @@ h1. CHANGELOG
 
 h2. 2.6.0 unreleased
 
+* no need to set app name in 'config/routes.rb' file for Rails 4.1
+* set preferences array of secrets for 'learn-rails' app
 * add 'rails-signup-download' example application
 * create individual recipes for example apps (and remove 'apps4' recipe)
 * use 'rails_apps_pages' gem to set up controllers, views, and routing for example apps
